<resources>
    <string name="app_name">仿趣约会</string>
    <string name="string_welcome">视频相亲找对象</string>
    <string name="string_blindDate">相亲</string>
    <string name="string_recommendation">推荐</string>
    <string name="string_trend">动态</string>
    <string name="string_message">消息</string>
    <string name="string_mine">我的</string>

    <string name="string_wait_get_dentifyingcode">重新发送</string>
    <string name="string_login_header_txt"><![CDATA[为你匹配到1000位同城异性,登录后可见]]></string>
    <string name="string_login_hint">点击输入手机号码</string>
    <string name="string_phone">手机号</string>
    <string name="string_verifycode">验证码</string>
    <string name="string_get_dentifyingcode">获取验证码</string>
    <string name="string_phone_error">请输入11位手机号!</string>
    <string name="string_verifycode_error">请输入4位验证码!</string>

</resources>